testsuite/tests/parser/should_fail/unpack_data_con.hs
module UnpackDataCon where

data T = {-# UNPACK #-} MkT
