testsuite/tests/parser/should_fail/unpack_data_con.stderr
unpack_data_con.hs:3:10: error: [GHC-40845]
    {-# UNPACK #-} cannot be applied to a data constructor.

